styles/styles.css
/* ... */
@media (min-width: 900px) {
  :root {
    --heading-font-size-xxxl: 3.75rem; /* 60px */
  }
}

@media (min-width: 1200px) {
  :root {
    --heading-font-size-xxxl: 2.75rem; /* 44px */
  }
}

@media (max-width: 1440px) {
  :root {
    --grid-container-width: 1200px;
  }
}

body {
  background-color: var(--body-background-color);
  font-family: var(--body-font-family);
  font-size: var(--body-font-size-m);
  color: var(--body-color);
  margin: 0;
  padding: 0;
  line-height: var(--body-line-height);
  display: none;
}

body.appear {
  display: unset;
}

header {
  display: flex;
  position: fixed;
  top: 0;
  width: 100%;
  height: var(--nav-height);
  background-color: var(--color-white);
  z-index: 3;
}

h1, h2, h3,
h4, h5, h6 {
  font-family: var(--heading-font-family);
  font-weight: 600;
  line-height: 1.25;
  margin-top: 1em;
  margin-bottom: .5em;
  scroll-margin: calc(var(--nav-height) + 1em);
}

h1 { font-size: var(--heading-font-size-xxl) }
h2 { font-size: var(--heading-font-size-xl) }
h3 { font-size: var(--heading-font-size-l) }
h4 { font-size: var(--heading-font-size-m) }
h5 { font-size: var(--heading-font-size-s) }
h6 { font-size: var(--heading-font-size-xs) }

p, dl, ol, ul, pre, blockquote {
  margin-top: 1em;
  margin-bottom: 1em;
}

hr {
  margin-top: 1.5em;
  margin-bottom: 1.5em;
  border: 0;
  border-bottom: 1px solid var(--overlay-background-color);
}

code, pre, samp {
  font-family: var(--fixed-font-family);
  font-size: var(--body-font-size-s);
}

code, samp {
  background-color: var(--overlay-background-color);
  padding: .125em .375em;
  border-radius: .25em;
  word-break: break-all;
  overflow-wrap: break-word;
}

pre code, pre samp {
  padding: 0;
  background-color: transparent;
  border-radius: 0;
}

pre {
  overflow: scroll;
}

main pre {
  background-color: var(--overlay-background-color);
  padding: 1em;
  border-radius: .25em;
  overflow-x: auto;
  white-space: pre;
}

a:any-link {
  color: var(--link-color);
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
  color: var(--link-hover-color);
}

/* buttons */
a.button:any-link, button {
  text-decoration: none;
  border-radius: 2rem;
  border: 2px solid transparent;
  padding: 6px 1rem;
  text-align: center;
  font-size: var(--body-font-size-s);
  font-style: normal;
  font-weight: 600;
  cursor: pointer;
  color: var(--color-white);
  background-color: var(--color-info-accent);
  margin: 16px 0;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  display: inline-block;
}

a.button:hover, a.button:focus, button:hover, button:focus  {
  background-color: var(--color-info-accent-hover);
  cursor: pointer;
}

button:disabled, button:disabled:hover {
  background-color: var(--overlay-background-color);
  cursor: unset;
}

a.button.primary:any-link {
  background-color: var(--color-gray-700);
}

a.button.primary:hover, a.button.primary:focus {
  background-color: var(--color-gray-800);
}

a.button.secondary, button.secondary {
  background-color: unset;
  border: 2px solid currentcolor;
  color: var(--text-color)
}

.icon svg {
  height: 100%;
  width: 100%;
}

a.button > svg {
  float: left;
  display: inline;
  width: 20px;
  height: 20px;
  margin: 8px 8px 8px 0;
  fill: currentcolor;
  color: currentcolor;
}

a.button > svg > use {
  fill: currentcolor;
  color: currentcolor;
}

main {
  font-size: var(--body-font-size-m);
  line-height: var(--body-line-height);
  margin: 64px 0 0;
  font-weight: var(--body-font-weight);
}

.fact-box main {
  margin-top: 60px;
}

main p:not(:last-of-type) {
  margin-bottom: 32px;
}

main h1, main h2, main h3, main h4, main h5, main h6 {
  font-weight: var(--heading-font-weight);
  line-height: var(--heading-line-height);
  margin-top: 48px;
  margin-bottom: 16px;
}

main h1 {
  font-size: var(--heading-font-size-xl);
}

main h2 {
  font-size: var(--heading-font-size-l);
}

main h3 {
  font-size: var(--heading-font-size-m);
}

main h4 {
  font-size: var(--heading-font-size-s);
}

main h5, main h6 {
  font-size: var(--heading-font-size-xs);
}

main input {
  font-size: 1.25rem;
  width: 100%;
  max-width: 50rem;
  display: block;
  margin-bottom: 1rem;
  padding: 0.75rem 0.6rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  border: 1px solid var(--text-color);
  color: var(--text-color);
  background-color: var(--background-color);
}

main input:hover {
  border: 1px solid var(--text-color);
}

main blockquote {
  font-style: italic;
  margin: 3rem;
  text-indent: -1rem;
  hanging-punctuation: first;
}

main blockquote p::before {
  content: "“";
  line-height: 0;
}

main blockquote p::after {
  content: "”";
  line-height: 0;
}

main img {
  max-width: 100%;
  width: auto;
  height: auto;
}

.icon {
  display: inline-block;
  height: 24px;
  width: 24px;
}

.fact-box .icon {
  display: inline-block;
  height: 30px;
  width: 30px;
  vertical-align: super;
  margin-top: -1em;
  animation: flash 1s ease-in-out infinite;
}

@keyframes flash {
  0%, 50%, 100% {
      opacity: 1;
  }

  25%, 75% {
      opacity: 0;
  }
}

main a:any-link {
  color: var(--body-color);
  line-height: var(--body-line-height);
}

main a.cta-link {
  color: var(--color-info-accent);
  font-weight: 700;
  text-decoration: none;
}

main a.cta-link::after {
  content: " >";
}

main a.cta-link:hover {
  color: var(--color-info-accent-hover);
}

main a.cta-link:active,
main a.cta-link:focus {
  color: var(--color-info-accent-down);
}

main img,
main video {
  max-width: 100%;
}

/* section wrapper */

main .section {
  margin-top: 64px;
}

.fact-box .section {
  padding: 20px;
  margin-top: 0;
}

main .section:first-of-type {
  padding-top: 0;
  margin-top: 128px;
}

main .section:last-of-type {
  margin-bottom: 0;
}

main .featured-article-container div h1 {
  padding: 0 1.6rem;
  text-align: center;
}

.fact-box .section .default-content-wrapper h1 {
  font-size: var(--heading-font-size-m);
}
/* ... */

